<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Birthdays &amp; Events</string>
    <string name="window_settings">Settings</string>
    <string name="window_widget_settings">Widget settings</string>
    <string name="window_about">About application</string>
    <string name="window_faq">Frequently Asked Questions</string>
    <string name="window_search_hints">Search hints</string>
    <string name="activity_title_events_scope">Filter</string>
    <string name="shortcut_notify">Today notifications</string>
    <string name="shortcut_facts">Facts</string>
    <string name="shortcut_quiz">Quiz</string>
    <string name="shortcut_settings">Settings</string>
    <string name="menu_add_event">Add event</string>
    <string name="menu_add_event_to_local">Add local event…</string>
    <string name="menu_add_event_to_contact">Add event to contact…</string>
    <string name="menu_add_event_to_contact_short">Add to contact…</string>
    <string name="menu_add_event_to_calendar">Add event to calendar…</string>
    <string name="menu_add_event_to_calendar_short">Add to calendar…</string>
    <string name="menu_open_file_with_events">Open file with events…</string>
    <string name="menu_open_file_with_events_short">Open file…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_filter_events">Filter…</string>
    <string name="menu_events_sources">Sources…</string>
    <string name="menu_events_types">Events types…</string>
    <string name="menu_hints">Search hints…</string>
    <string name="menu_context_edit_contact">Edit contact</string>
    <string name="menu_context_open_contact">Open contact</string>
    <string name="menu_context_create_contact">Create contact…</string>
    <string name="menu_context_open_calendar_event">Open calendar event</string>
    <string name="menu_context_event_info">Event data</string>
    <string name="menu_context_hide_event">Hide event</string>
    <string name="menu_context_unhide_event">Unhide event</string>
    <string name="menu_context_remind">Remind…</string>
    <string name="menu_context_remind_1h">In an hour</string>
    <string name="menu_context_remind_morning">Next morning</string>
    <string name="menu_context_anniversary_list">All anniversaries titles</string>
    <string name="menu_context_silent_event">Do not notify</string>
    <string name="menu_context_unsilent_event">Resume notify</string>
    <string name="menu_context_merge_event">Link to contact…</string>
    <string name="menu_context_unmerge_event">Unlink from contact</string>
    <string name="menu_context_remerge_event">Link to other contact…</string>
    <string name="menu_context_open_url">Open web link</string>
    <string name="menu_context_share">Share event…</string>
    <string name="menu_context_share_fact">Share fact…</string>
    <string name="menu_context_share_as_image">as image</string>
    <string name="menu_context_share_as_text">as text</string>
    <string name="menu_context_xDaysEvent_add">Add days counter…</string>
    <string name="menu_context_xDaysEvent_edit">Days counter…</string>
    <string name="menu_context_set_event_type">Choose event type…</string>
    <string name="menu_context_favorites_add">Add to favorites</string>
    <string name="menu_context_favorites_remove">Remove from favorites</string>
    <string name="menu_context_edit_local_event">Edit event</string>
    <string name="menu_context_create_from_local_event">One more event…</string>
    <string name="menu_context_dial">Dial</string>
    <string name="menu_save">Save changes</string>
    <string name="menu_help">Reference</string>
    <string name="menu_help_events_calendar">Calendar events</string>
    <string name="menu_help_events_files">Local files events</string>
    <string name="msg_label_search">Enter part of full name, contact type, job, title, some part of event date (by comma):</string>
    <string name="msg_hint_global_search">Search birthdays and events</string>
    <string name="button_cancel">Cancel</string>
    <string name="event_type_birthday">Birthday</string>
    <string name="event_type_anniversary">Anniversary</string>
    <string name="event_type_death">Death anniversary</string>
    <string name="event_type_crowning">Crowning</string>
    <string name="event_type_nameday">Name day</string>
    <string name="pref_Language_title">Language</string>
    <string name="pref_Language_description">Interface and data language</string>
    <string name="pref_Theme_title">Color theme</string>
    <string name="pref_Theme_description">Interface color theme</string>
    <string name="pref_CustomEvents_title">Events setup</string>
    <string name="pref_CustomEvents_summary">Events sources, types classification, labels customizing</string>
    <string name="pref_CustomEvents_Birthday_UseInternal_title">Use standard labels</string>
    <string name="pref_CustomEvents_Birthday_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_Birthday_Labels_summary">Events with these labels will be identified as birthdays (by comma)</string>
    <string name="pref_CustomEvents_Anniversary_UseInternal_title">Use standard labels</string>
    <string name="pref_CustomEvents_Anniversary_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_Anniversary_Labels_summary">Events with these labels will be identified as anniversaries (by comma)</string>
    <string name="pref_CustomEvents_NameDay_UseInternal_title">Use standard labels</string>
    <string name="pref_CustomEvents_NameDay_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_NameDay_Labels_summary">Events with these labels will be identified as name days</string>
    <string name="pref_CustomEvents_Crowning_UseInternal_title">Use standard labels</string>
    <string name="pref_CustomEvents_Crowning_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_Crowning_Labels_summary">Events with these labels will be identified as crownings (by comma)</string>
    <string name="pref_CustomEvents_Death_UseInternal_title">Use standard labels</string>
    <string name="pref_CustomEvents_Death_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_Death_Labels_summary">Events with these labels will be identified as death anniversaries (by comma)</string>
    <string name="pref_CustomEvents_Custom_title">User-defined events</string>
    <string name="pref_CustomEvents_Custom_Caption_title">Event caption</string>
    <string name="pref_CustomEvents_Custom_Labels_title">Events labels</string>
    <string name="pref_CustomEvents_Custom_UseYear_title">Use date with year</string>
    <string name="pref_Widgets_title">Widgets</string>
    <string name="pref_Widgets_BottomInfo_title">Event caption (bottom row)</string>
    <string name="pref_Widgets_Color_EventToday_title">Today events</string>
    <string name="pref_Widgets_Color_EventSoon_title">Near events</string>
    <string name="pref_Widgets_Days_EventSoon_title">Nearest events days amount</string>
    <string name="menu_save_template">Save template</string>
    <string name="menu_load_template">Load template</string>
    <string name="content_provider_authority" translatable="false">"org.vovka.birthdaycountdown.SuggestionProvider"</string>
    <string name="content_provider_intent_view" translatable="false">"android.intent.action.VIEW"</string>
    <string name="pref_Language_key" translatable="false">Language</string>
    <string name="pref_Language_default" translatable="false">AUTO</string>
    <string name="pref_Theme_key" translatable="false">Theme</string>
    <string name="pref_Theme_default" translatable="false">5</string>
    <string name="pref_CustomEvents_Birthday_UseInternal_default" translatable="false">true</string>
    <string name="pref_CustomEvents_Birthday_UseInternal_key" translatable="false">CustomEvents_Birthday_UseInternal</string>
    <string name="pref_CustomEvents_Birthday_Labels_key" translatable="false">CustomEvents_Birthday_Labels</string>
    <string name="pref_CustomEvents_Anniversary_UseInternal_default" translatable="false">true</string>
    <string name="pref_CustomEvents_Anniversary_UseInternal_key" translatable="false">CustomEvents_Anniversary_UseInternal</string>
    <string name="pref_CustomEvents_Anniversary_Labels_key" translatable="false">CustomEvents_Anniversary_Labels</string>
    <string name="pref_CustomEvents_NameDay_UseInternal_default" translatable="false">true</string>
    <string name="pref_CustomEvents_NameDay_UseInternal_key" translatable="false">CustomEvents_NameDay_UseInternal</string>
    <string name="pref_CustomEvents_NameDay_Labels_key" translatable="false">CustomEvents_NameDay_Labels</string>
    <string name="pref_CustomEvents_Crowning_UseInternal_default" translatable="false">true</string>
    <string name="pref_CustomEvents_Crowning_UseInternal_key" translatable="false">CustomEvents_Crowning_UseInternal</string>
    <string name="pref_CustomEvents_Crowning_Labels_key" translatable="false">CustomEvents_Crowning_Labels</string>
    <string name="pref_CustomEvents_Death_UseInternal_default" translatable="false">true</string>
    <string name="pref_CustomEvents_Death_UseInternal_key" translatable="false">CustomEvents_Death_UseInternal</string>
    <string name="pref_CustomEvents_Death_Labels_key" translatable="false">CustomEvents_Death_Labels</string>
    <string name="pref_CustomEvents_Custom1_Caption_key" translatable="false">CustomEvents_Custom1_Caption</string>
    <string name="pref_CustomEvents_Custom1_Labels_key" translatable="false">CustomEvents_Custom1_Labels</string>
    <string name="pref_CustomEvents_Custom1_UseYear_key" translatable="false">CustomEvents_Custom1_UseYear</string>
    <string name="pref_CustomEvents_Custom2_Caption_key" translatable="false">CustomEvents_Custom2_Caption</string>
    <string name="pref_CustomEvents_Custom2_Labels_key" translatable="false">CustomEvents_Custom2_Labels</string>
    <string name="pref_CustomEvents_Custom2_UseYear_key" translatable="false">CustomEvents_Custom2_UseYear</string>
    <string name="pref_CustomEvents_Custom3_Caption_key" translatable="false">CustomEvents_Custom3_Caption</string>
    <string name="pref_CustomEvents_Custom3_Labels_key" translatable="false">CustomEvents_Custom3_Labels</string>
    <string name="pref_CustomEvents_Custom3_UseYear_key" translatable="false">CustomEvents_Custom3_UseYear</string>
    <string name="pref_CustomEvents_Custom4_Caption_key" translatable="false">CustomEvents_Custom4_Caption</string>
    <string name="pref_CustomEvents_Custom4_Labels_key" translatable="false">CustomEvents_Custom4_Labels</string>
    <string name="pref_CustomEvents_Custom4_UseYear_key" translatable="false">CustomEvents_Custom4_UseYear</string>
    <string name="pref_CustomEvents_Custom5_Caption_key" translatable="false">CustomEvents_Custom5_Caption</string>
    <string name="pref_CustomEvents_Custom5_Labels_key" translatable="false">CustomEvents_Custom5_Labels</string>
    <string name="pref_CustomEvents_Custom5_UseYear_key" translatable="false">CustomEvents_Custom5_UseYear</string>
    <string name="pref_CustomEvents_UseYear_default" translatable="false">true</string>
    <string name="pref_Widgets_BottomInfo_key" translatable="false">Widget_BottomInfo</string>
    <string name="pref_Widgets_BottomInfo_default" translatable="false">1</string>
    <string name="pref_Widgets_Days_EventSoon_key" translatable="false">Widget_Days_EventSoon</string>
    <string name="pref_Widgets_Days_EventSoon_default" translatable="false">2</string>
    <string name="pref_Widgets_Color_EventToday_key" translatable="false">Widget_Color_EventToday</string>
    <string name="pref_Widgets_Color_EventSoon_key" translatable="false">Widget_Color_EventSoon</string>
</resources>