<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /**
  ~  * Created by Vladimir Belov on 18.09.2022, 8:26
  ~  * Copyright (c) 2018 - 2022. All rights reserved.
  ~  * Last modified 29.05.2022, 21:11
  ~  */
  -->

<!-- https://habr.com/ru/post/111961/ -->
<!-- https://stackoverflow.com/questions/47917200/android-custom-suggestions-wont-show-up -->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="@string/msg_label_search"    
    android:includeInGlobalSearch="true"
    android:searchSuggestAuthority="@string/content_provider_authority"
    android:searchSuggestIntentAction="@string/content_provider_intent_view"
    android:searchSuggestThreshold="3"
    android:searchSuggestSelection=" ?"
    android:searchMode="queryRewriteFromText"
    android:searchSettingsDescription="@string/msg_hint_global_search" />
