<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.vovka.birthdaycountdown.MainActivity">
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction=""/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_week"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_exit" />
</menu>
